# Fluidsim-clone1

./: .gitignore  README.md  index.html  package.json  vite.config.ts
demo/: demo_electric_basic.json  demo_hydraulic_basic.json  demo_pneumatic_basic.json
docs/: .gitkeep  decisions.md  roadmap.md  spec.md
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx
src/canvas/: CanvasViewport.tsx
src/commands/: index.test.ts  index.ts
src/domain/: index.test.ts  index.ts
src/layout/: CanvasEditor.tsx  DiagnosticsPanel.tsx  LibraryPanel.tsx  PropertiesPanel.tsx  StatusBar.tsx  TopToolbar.tsx
src/simulation/: .gitkeep  README.md
src/storage/: index.test.ts  index.ts
src/ui/: AppHeader.tsx
